fix(fab): Allow overflow
Hiding overflow conflicts with things like Tooltips which we need to support.

--- a/packages/mdl-fab/mdl-fab.scss
+++ b/packages/mdl-fab/mdl-fab.scss
@@ -34,7 +34,6 @@
     0 6px 10px 0 rgba(0, 0, 0, .14),
     0 1px 18px 0 rgba(0, 0, 0, .12);
   cursor: pointer;
-  overflow: hidden;
   user-select: none;
   box-sizing: border-box;
   fill: currentColor;
